PUG-066: Finaliza GEO e refatora shared;
Também deleta testes (por enquanto);