@@ -1,7 +1,6 @@
 package com.pug.geo.presenter;
 
 import com.pug.geo.domain.City;
-import com.pug.geo.domain.vos.IbgeCode;
 import com.pug.geo.infra.read.dtos.CityView;
 import com.pug.geo.presenter.dtos.CityCreateOrUpdateRequest;
 import com.pug.geo.presenter.dtos.CityResponse;
@@ -32,22 +31,29 @@ import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.core.UriInfo;
+
 import java.net.URI;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-/** REST resource for managing cities. */
+/**
+ * REST resource for managing cities.
+ */
 @ApplicationScoped
 @Path("/geo/cities")
 @Consumes(MediaType.APPLICATION_JSON)
 @Produces(MediaType.APPLICATION_JSON)
 public class CityResource {
 
-  @Inject CityService writeService;
-  @Inject CityReadService readService;
+  @Inject
+  CityService writeService;
+  @Inject
+  CityReadService readService;
 
-  @Context UriInfo uri;
+  @Context
+  UriInfo uri;
 
   /**
    * Creates a new city.
@@ -57,11 +63,14 @@ public class CityResource {
    */
   @POST
   public Response create(@Valid CityCreateOrUpdateRequest req) {
-    City created =
-        writeService.save(new CityCreateOrUpdateCommand(req.name(), new IbgeCode(req.ibgeCode())));
-    CityResponse body = CityPresenter.toResponse(readService.getViewById(created.getId()));
-    URI location = uri.getAbsolutePathBuilder().path(created.getId().toString()).build();
-    return Response.created(location).entity(ApiEnvelope.created(body)).build();
+    City createdCityDomain =
+            writeService.save(new CityCreateOrUpdateCommand(req.name(), req.ibgeCodeString()));
+
+    CityView cityView = readService.getViewById(createdCityDomain.getId());
+    CityResponse responseBody = CityPresenter.toResponse(cityView);
+
+    URI location = uri.getAbsolutePathBuilder().path(responseBody.id().toString()).build();
+    return Response.created(location).entity(ApiEnvelope.created(responseBody)).build();
   }
 
   /**
@@ -74,30 +83,35 @@ public class CityResource {
   @Path("/bulk")
   public Response createBulk(@Valid BulkCreateRequest<CityCreateOrUpdateRequest> req) {
     List<CityCreateOrUpdateCommand> toSave =
-        req.entities().stream()
-            .map(r -> new CityCreateOrUpdateCommand(r.name(), new IbgeCode(r.ibgeCode())))
-            .toList();
-    List<City> created = writeService.saveAll(toSave);
+            req.entities().stream()
+                    .map(r -> new CityCreateOrUpdateCommand(r.name(), r.ibgeCodeString()))
+                    .collect(Collectors.toList());
+
+    List<City> createdCitiesDomain = writeService.saveAll(toSave);
+
     return Response.status(Response.Status.CREATED)
-        .entity(ApiEnvelope.created(BulkCreateResult.sizeOnly(created.size())))
-        .build();
+            .entity(ApiEnvelope.created(BulkCreateResult.sizeOnly(createdCitiesDomain.size())))
+            .build();
   }
 
   /**
    * Updates an existing city.
    *
-   * @param id the ID of the city to update.
+   * @param id  the ID of the city to update.
    * @param req the city update request.
    * @return a Response containing the updated city.
    */
   @PUT
   @Path("/{id}")
   public Response update(@PathParam("id") UUID id, @Valid CityCreateOrUpdateRequest req) {
-    City updated =
-        writeService.update(
-            id, new CityCreateOrUpdateCommand(req.name(), new IbgeCode(req.ibgeCode())));
-    CityResponse body = CityPresenter.toResponse(readService.getViewById(updated.getId()));
-    return Response.ok(ApiEnvelope.ok(body)).build();
+    City updatedCityDomain =
+            writeService.update(
+                    id, new CityCreateOrUpdateCommand(req.name(), req.ibgeCodeString()));
+
+    CityView cityView = readService.getViewById(updatedCityDomain.getId());
+    CityResponse responseBody = CityPresenter.toResponse(cityView);
+
+    return Response.ok(ApiEnvelope.ok(responseBody)).build();
   }
 
   /**
@@ -121,8 +135,9 @@ public class CityResource {
   @GET
   @Path("/{id}")
   public Response get(@PathParam("id") UUID id) {
-    CityResponse body = CityPresenter.toResponse(readService.getViewById(id));
-    return Response.ok(ApiEnvelope.ok(body)).build();
+    CityView cityView = readService.getViewById(id);
+    CityResponse responseBody = CityPresenter.toResponse(cityView);
+    return Response.ok(ApiEnvelope.ok(responseBody)).build();
   }
 
   /**
@@ -134,8 +149,9 @@ public class CityResource {
   @GET
   @Path("/ibge/{ibgeCode}")
   public Response getByIbgeCode(@PathParam("ibgeCode") String ibgeCode) {
-    CityResponse body = CityPresenter.toResponse(readService.getViewByIbgeCode(ibgeCode));
-    return Response.ok(ApiEnvelope.ok(body)).build();
+    CityView cityView = readService.getViewByIbgeCode(ibgeCode);
+    CityResponse responseBody = CityPresenter.toResponse(cityView);
+    return Response.ok(ApiEnvelope.ok(responseBody)).build();
   }
 
   /**
@@ -147,8 +163,9 @@ public class CityResource {
   @GET
   public Response listOrSearch(@QueryParam("q") String q) {
     List<CityView> views =
-        (StringUtils.isEmpty(q)) ? readService.listViews() : readService.search(q);
-    List<CityResponse> body = views.stream().map(CityPresenter::toResponse).toList();
-    return Response.ok(ApiEnvelope.ok(BulkCreateResult.of(body))).build();
+            (StringUtils.isEmpty(q)) ? readService.listViews() : readService.search(q);
+    List<CityResponse> responseBody = views.stream().map(CityPresenter::toResponse).collect(Collectors.toList());
+
+    return Response.ok(ApiEnvelope.ok(BulkCreateResult.of(responseBody))).build();
   }
 }
